force-app/main/default/objects/MDGBusinessMaster__c/MDGBusinessMaster__c.object-meta.xml
<CustomObject>
    <label>MDG Business Master</label>
    <nameField>
        <label>CLASS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDG Business Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>