force-app/main/default/objects/MDGBusinessMaster__c/fields/BISDT__c.field-meta.xml
<CustomField>
    <fullName>BISDT__c</fullName>
    <label>BISDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>