force-app/main/default/objects/MDGBusinessMaster__c/fields/CLASS__c.field-meta.xml
<CustomField>
    <fullName>CLASS__c</fullName>
    <label>CLASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>