force-app/main/default/objects/MDGBusinessMaster__c/fields/COMPC__c.field-meta.xml
<CustomField>
    <fullName>COMPC__c</fullName>
    <label>COMPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>