force-app/main/default/objects/MDGBusinessMaster__c/fields/EOPDT__c.field-meta.xml
<CustomField>
    <fullName>EOPDT__c</fullName>
    <label>EOPDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>