force-app/main/default/objects/MDGBusinessMaster__c/fields/EOSDT__c.field-meta.xml
<CustomField>
    <fullName>EOSDT__c</fullName>
    <label>EOSDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>