force-app/main/default/objects/MDGBusinessMaster__c/fields/HCLAS__c.field-meta.xml
<CustomField>
    <fullName>HCLAS__c</fullName>
    <label>HCLAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>