force-app/main/default/objects/MDGBusinessMaster__c/fields/IFFlag__c.field-meta.xml
<CustomField>
    <fullName>IFFlag__c</fullName>
    <label>IF Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>