force-app/main/default/objects/MDGBusinessMaster__c/fields/KLAGR__c.field-meta.xml
<CustomField>
    <fullName>KLAGR__c</fullName>
    <label>KLAGR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>