force-app/main/default/objects/MDGBusinessMaster__c/fields/KSCHL__c.field-meta.xml
<CustomField>
    <fullName>KSCHL__c</fullName>
    <label>KSCHL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>