force-app/main/default/objects/MDGBusinessMaster__c/fields/LODAT__c.field-meta.xml
<CustomField>
    <fullName>LODAT__c</fullName>
    <label>LODAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>