force-app/main/default/objects/MDGBusinessMaster__c/fields/NORMB__c.field-meta.xml
<CustomField>
    <fullName>NORMB__c</fullName>
    <label>NORMB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>