force-app/main/default/objects/MDGBusinessMaster__c/fields/PLCST__c.field-meta.xml
<CustomField>
    <fullName>PLCST__c</fullName>
    <label>PLCST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>