force-app/main/default/objects/MDGBusinessMaster__c/fields/PLLEV__c.field-meta.xml
<CustomField>
    <fullName>PLLEV__c</fullName>
    <label>PLLEV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>