force-app/main/default/objects/MDGBusinessMaster__c/fields/PRDYN__c.field-meta.xml
<CustomField>
    <fullName>PRDYN__c</fullName>
    <label>PRDYN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>