force-app/main/default/objects/MDGBusinessMaster__c/fields/SOLDPC__c.field-meta.xml
<CustomField>
    <fullName>SOLDPC__c</fullName>
    <label>SOLDPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>