force-app/main/default/objects/MDGBusinessMaster__c/fields/SOLDPT__c.field-meta.xml
<CustomField>
    <fullName>SOLDPT__c</fullName>
    <label>SOLDPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>