force-app/main/default/objects/MDGBusinessMaster__c/fields/SOLMNC__c.field-meta.xml
<CustomField>
    <fullName>SOLMNC__c</fullName>
    <label>SOLMNC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>