force-app/main/default/objects/MDGBusinessMaster__c/fields/SOLMNT__c.field-meta.xml
<CustomField>
    <fullName>SOLMNT__c</fullName>
    <label>SOLMNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>