force-app/main/default/objects/MDGBusinessMaster__c/fields/SOLTY__c.field-meta.xml
<CustomField>
    <fullName>SOLTY__c</fullName>
    <label>SOLTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>