force-app/main/default/objects/MDGBusinessMaster__c/fields/SPRAS__c.field-meta.xml
<CustomField>
    <fullName>SPRAS__c</fullName>
    <label>SPRAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>