force-app/main/default/objects/MDGBusinessMaster__c/fields/SRVBNC__c.field-meta.xml
<CustomField>
    <fullName>SRVBNC__c</fullName>
    <label>SRVBNC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>