force-app/main/default/objects/MDGBusinessMaster__c/fields/SRVBNT__c.field-meta.xml
<CustomField>
    <fullName>SRVBNT__c</fullName>
    <label>SRVBNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>