force-app/main/default/objects/MDGBusinessMaster__c/fields/SRVDPC__c.field-meta.xml
<CustomField>
    <fullName>SRVDPC__c</fullName>
    <label>SRVDPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>