force-app/main/default/objects/MDGBusinessMaster__c/fields/SRVDPT__c.field-meta.xml
<CustomField>
    <fullName>SRVDPT__c</fullName>
    <label>SRVDPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>