force-app/main/default/objects/MDGBusinessMaster__c/fields/Type_del__c.field-meta.xml
<CustomField>
    <fullName>Type_del__c</fullName>
    <label>IF Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>