force-app/main/default/objects/MDGBusinessMaster__c/fields/USEYN__c.field-meta.xml
<CustomField>
    <fullName>USEYN__c</fullName>
    <label>USEYN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>