force-app/main/default/objects/MDGBusinessMaster__c/fields/VONDT__c.field-meta.xml
<CustomField>
    <fullName>VONDT__c</fullName>
    <label>VONDT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>