force-app/main/default/objects/MDGBusinessMaster__c/fields/ZZTECH_YN__c.field-meta.xml
<CustomField>
    <fullName>ZZTECH_YN__c</fullName>
    <description>Tech. Attribute</description>
    <label>ZZTECH_YN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>